--- a/people/src/public/css/estilo.css
+++ b/people/src/public/css/estilo.css
@@ -1,12 +1,11 @@
 @media screen and (max-width: 768px) {
 
 .circular--square {
-    border-top-left-radius: 35% 35%;
-    border-top-right-radius: 35% 35%;
-    border-bottom-right-radius: 35% 35%;
-    border-bottom-left-radius: 35% 35%;
-    position: relative;
-    left: 70px;
+  border-radius: 50%;
+  position: relative;
+  left: 5px;
+  width: 250px;
+  height: 250px;
   }
   .navbar,
 .navbar-collapse {
@@ -47,15 +46,41 @@
     height: 200px;
     object-fit: contain;
   }
+  button{
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    padding: 10px;
+    padding-left: 40px;
+    font-size: 14px;
+    text-align: left;
+}
+button:hover {
+    background-color: rgb(73, 73, 73);
+}
+
+.Bar_menu{
+    background-color: black;
+    width: 100%;
+    height: 40px;
+    display: grid;
+    grid-template-columns: auto 1fr 300px;
+}
+.login {
+    background-color: rgb(26, 26, 26);
+    display: grid;
+    grid-template-columns: 1fr auto;
+    color: white;
+    text-align: center;
+
+}
 }
 @media screen and (min-width: 1024px) {
   .circular--square {
-      border-top-left-radius: 35% 35%;
-      border-top-right-radius: 35% 35%;
-      border-bottom-right-radius: 35% 35%;
-      border-bottom-left-radius: 35% 35%;
+      border-radius: 50%;
       position: relative;
-      left: 70px;
+      left: 5px;
+      width: 250px;
+      height: 250px;
     }
     .navbar,
   .navbar-collapse {
@@ -96,4 +121,31 @@
       height: 200px;
       object-fit: contain;
     }
+    button{
+      background-color: rgba(0, 0, 0, 0);
+      color: rgb(255, 255, 255);
+      padding: 10px;
+      padding-left: 40px;
+      font-size: 14px;
+      text-align: left;
+  }
+  button:hover {
+      background-color: rgb(73, 73, 73);
+  }
+  
+  .Bar_menu{
+      background-color: black;
+      width: 100%;
+      height: 40px;
+      display: grid;
+      grid-template-columns: auto 1fr 300px;
+  }
+  .login {
+      background-color: rgb(26, 26, 26);
+      display: grid;
+      grid-template-columns: 1fr auto;
+      color: rgb(255, 255, 255);
+      text-align: center;
+  
+  }
   }
