--- a/people/src/public/css/login_style.css
+++ b/people/src/public/css/login_style.css
@@ -1,93 +1,60 @@
 
-.slider{
-  width: 150%;
-  margin: auto;
-  overflow: hidden;
-
-}
-.slider ul{
-  display: flex;
-  padding: 10%;
-  width: 800%;
-  animation: automatico 10s infinite alternate linear;
-
-}
-.slider li{
-  width: 70%;
-  list-style: none;
-
-}
-.slider img{
-  width: 90%;
-  height: 150px;
-}
-@media(min-width: 780px){
-  .slider img{
-    height: 600px;
-  }
-}
-
-@keyframes  automatico{
-  0%{margin-left: 0;}
-  20%{margin-left: 0;}
-  25%{margin-left: -100%;}
-  45%{margin-left: -100%;}
-  50%{margin-left: -100%;}
-  70%{margin-left: -200%;}
-  75%{margin-left: -300%;}
-  100%{margin-left: -300%;}
-}
   
   body{
     background-repeat: no-repeat;
-    background: url(logo.png);   
+    background: cornsilk;   
     background-size:cover;
   }
   
   #cuadrado{
-    width: 300px;
-    height: 350px;
-    background: url(moradp.webp); 
-    margin: auto;
+    width: 350px;
+    height: 450px;
+    background: url(../img/moradp.webp); 
+    margin: 100px;;
     border-radius: 30px; 
          
   }
   
   .contenedor2{
-    margin-top:200px;
+    margin-top:60px;
     text-align: center;
+    color: aliceblue;
+    
   }
   
   .ft-login img{
-    width: 80px;
-    height: 90px;
-    margin-top: 8px;
-    float: right;
-    margin-left: 30px;
-    border-radius: 8px;
+    width: 100px;
+    height: 100px;
   }
   
   #separador{
-    height: 75px;
+    height: 50px;
   }
   
-  h1{
-    margin-top: 25px;
-    float: right;
-    margin-right: 35px;    
-  
-  }
-  
-  #form2 input{
-    width: 250px;
-    height: 30px;   
-    border: none;
-    border-radius: 5px;
+  #form2b{
+   
+      width: 70px;
+      height: 30px;   
+      margin-top: 10px;
+      margin: auto;
+      border-radius: 6px;
+      background-color: rgba(45, 23, 65, 0.447);
+      
   }
   #form2 button{
     width: 130px;
     height: 35px;
     border-style: none;
     border-radius: 20px;
-    background: linear-gradient(146deg, rgb(188, 166, 215) 43%, rgba(255,213,250,1) 83%);
+    background: linear-gradient(146deg, rgb(95, 65, 133) 43%, rgba(255,213,250,1) 83%);
   }
+  .carrusel_element img{
+    width: 590px;
+    height: 590px;
+    margin: 900px;
+    padding: 500px;
+    padding-top: 50px;
+  
+  }
+ 
+  
