--- a/people/src/public/css/estilo.css
+++ b/people/src/public/css/estilo.css
@@ -1,12 +1,6 @@
 @media screen and (max-width: 768px) {
 
-.circular--square {
-  border-radius: 50%;
-  position: relative;
-  left: 5px;
-  width: 250px;
-  height: 250px;
-  }
+
   .navbar,
 .navbar-collapse {
   flex-direction:column;
@@ -166,4 +160,27 @@ button:hover {
       text-align: center;
   
   }
+  h1.pedo{
+    
+    width: 120px;
+    height: 20px;
+    background-position: 20px;
+    color: darkred;
+    background-color: rgba(17, 1, 105, 0.836);
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   }
+  button.subir{
+    cursor:pointer; 
+    display:inline-block;
+    width:250px;
+    height:40px;
+    margin-top:10px;
+    border:none;
+    font-family:Impact;
+    text-transform:uppercase;
+    color:rgb(252, 252, 252);
+    -webkit-transition:.5s;
+    transition:.5s;
+    background-color: rgb(0, 195, 255);
+  }
+}
