--- a/people/src/public/css/menu.css
+++ b/people/src/public/css/menu.css
@@ -15,6 +15,12 @@ button{
 .central div button:hover {
     background-color: rgb(73, 73, 73);
 }
+.central{
+    border-right: 5px solid white;
+}
+.picture{
+    border-right: 5px solid white;
+}
 
 .Bar_menu{
     background-color: black;
@@ -24,6 +30,7 @@ button{
     grid-template-columns: auto 1fr 300px;
 }
 .login {
+
     background-color: rgb(26, 26, 26);
     display: grid;
     grid-template-columns: 1fr auto;
