--- a/people/src/public/css/menu.css
+++ b/people/src/public/css/menu.css
@@ -6,7 +6,7 @@ h2{
 button{
     background-color: rgba(0, 0, 0, 0);
     color: white;
-    padding: 10px;
+    padding: 12px;
     padding-left: 40px;
     font-size: 14px;
     text-align: left;
@@ -25,7 +25,7 @@ button{
 .Bar_menu{
     background-color: black;
     width: 100%;
-    height: 40px;
+    height: 45px;
     display: grid;
     grid-template-columns: auto 1fr 300px;
 }
@@ -40,11 +40,17 @@ button{
 
 }
 .login h2 { 
-   padding-top: 7px;
+   padding-top: 10px;
+   
 }
+.userimg img{
+    padding-right: 20px;
+    padding-top: 5px;
+    
+    }
 .slider_one{
     visibility: visible;
-    top: 40px;
+    top: 45px;
     left: 55%;
     color: black;
 background-color: white;
@@ -55,13 +61,19 @@ z-index:1;
 .slider_two{
     visibility: visible;
     
-    top: 40px;
+    top: 45px;
     right: 10px;
     color: black;
 background-color: white;
 position: fixed;
 width: auto;
 z-index:1;
+}
+.close {
+    visibility: hidden;
+}
+.close_two {
+    visibility: hidden;
 }
 
 
