--- a/people/src/public/css/register_style.css
+++ b/people/src/public/css/register_style.css
@@ -1,27 +1,21 @@
+.container{
+  margin: auto;
+  display: grid ;
+  grid-template-columns:200px 500px 1fr;
 
+}
 
 .separador-formu{
   height: 10px;
 }
 
 
-
-body{
-  background:cornsilk;   
-  background-size:cover;
-  background: position 50px;;
-  font-family: sans-serif;
-  color: white;
-}
-
-
 .formulario2{
-  margin: auto;;  
   border-radius: 60px;
-  padding: 9px;
+  margin: auto;
   line-height: 22px;
-  width: 30%;
-   background-image: linear-gradient(125deg, #0097ff 0, #008fff 7.14%, #0086ff 14.29%, #367bff 21.43%, #816eff 28.57%, #ab60ff 35.71%, #cb4eff 42.86%, #e438ff 50%, #f913ec 57.14%, #ff00d7 64.29%, #ff00c2 71.43%, #ff00ac 78.57%, #ff0096 85.71%, #ff0080 92.86%, #ff006b 100%);; 
+  width: 50%;
+ background-image: linear-gradient(0, #65739f 0, #474f68 50%, #2b2e36 100%);
   
 }
 
@@ -29,8 +23,12 @@ body{
   text-align: center;
   color: white;
 
-
 }
+.reg > label > input {
+  width: 70%;
+  border-radius: 5px;
+  height: 20px;
+} 
 
 #ree{
   font-size: 30px;
@@ -44,9 +42,14 @@ body{
   color: white;
 }
 
-.carrusel_element img{
-  width: 750px;
-  height: 750px;
-
-
+.container_fotos img{
+  margin-top: 25%;
+  background-color:rgba(80, 15, 80, 0.433);
+  width: 420px;
+  border-radius: 6px;
+}
+.logo{
+  background-color: #252525;
+  width: 100%;
+  
 }
