--- a/people/src/public/css/menu.css
+++ b/people/src/public/css/menu.css
@@ -49,19 +49,32 @@ button{
     }
 .slider_one{
     visibility: visible;
-    top: 45px;
+    border-radius: 5px ;
+    top: 55px;
     left: 55%;
     color: black;
-background-color: white;
-position: fixed;
-width: auto;
-z-index:1;
-visibility: hidden;
+    background-color: white;
+    position: fixed;
+    width: auto;
+    z-index:1;
+    visibility: hidden;
+    -webkit-border-radius: 5px ;
+    -moz-border-radius: 5px ;
+    -ms-border-radius: 5px ;
+    -o-border-radius: 5px ;
+}
+.slider_one > div  , .slider_two > div {
+    padding-top: 5px;
+    width: 100px;
+}
+.slider_one > div > a  , .slider_two > div > a{
+    text-align: center;
 }
 .slider_two{
+    border-radius: 5px ;
     visibility: hidden;
     
-    top: 45px;
+    top: 55px;
     right: 10px;
     color: black;
 background-color: white;
@@ -74,6 +87,10 @@ z-index:1;
 }
 .close_two {
     visibility: visible;
+}
+.central_buton {
+    text-align: center;
+    height: 45px;
 }
 
 
