--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../public/css/Global.css">
-    <link rel="stylesheet" href="../public/css/menu.css">
+    <link rel="stylesheet" href="{{url_for('static',filename ='Global.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename ='menu.css')}}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
-    <link rel="stylesheet" href="../public/css/inicio.css">
+    <link rel="stylesheet" href="{{url_for('static',filename ='inicio.css')}}">
+    
 
 </head> <div class="Bar_menu">
     <div class="picture">
@@ -91,7 +92,7 @@
     </div>
 
 </div>
-<script src="../public/js/inicion.js"></script>
+<script type = "text/javascript" src="{url_for('static filename ='inicion.js')}}"></script>
 </header>
 
 <body>
@@ -195,8 +196,8 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
-    <script src="../public/js/inicion.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></sc>
+    <script type = "text/javascript" src="{url_for('static filename ='inicion.js')}}"></script>
 </body>
 <br>
 <br>
