--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -92,7 +92,7 @@
     </div>
 
 </div>
-<script type = "text/javascript" src="{url_for('static filename ='inicion.js')}}"></script>
+<script  src="{url_for('static',filename ='inicion.js')}}"></script>
 </header>
 
 <body>
@@ -195,9 +195,9 @@
 
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></sc>
-    <script type = "text/javascript" src="{url_for('static filename ='inicion.js')}}"></script>
+    <script  src="{url_for('static',filename ='inicion.js')}}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
+   
 </body>
 <br>
 <br>
