--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -1,101 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
+ 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="{{url_for('static',filename ='Global.css')}}">
-    <link rel="stylesheet" href="{{url_for('static',filename ='menu.css')}}">
+    
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
     <link rel="stylesheet" href="{{url_for('static',filename ='inicio.css')}}">
     
 
-</head> <div class="Bar_menu">
-    <div class="picture">
-        <a href="../vistas/inicio.html"> <img src="/people/src/public/img/foutos.png" alt="foto" height="45px"></a>
-    </div>
-    <div class="central">
-        <div>
-            <a href="../vistas/comunidad.html"><button class="central_buton">Comunidad</button></a>
-            <button class="central_buton"> Trending</button>
-            
-            <button type="" id="pen-clo" class="central_buton"> category></button>
-            
-        </div>
-    </div>
-    
-        <div class="login" >
-          
-            <div>
-               <h2>Rasdasdasd</h2>
-               
-            </div>
-            <div class="userimg"><img src="https://storage.googleapis.com/uscimages/account.png" alt="" height="35px" id="close-open"></div>
+</head> 
+<header>
+    {% extends './menu.html' %}
+{% block menu_bar  %}
 
-
-
-        </div>
-    
-    <div class="slider_one" id="closesecsion_two">
-        <div>
-            <a href="">2D</a>
-
-        </div>
-        <div>
-            <a href="">olio</a>
-
-        </div>
-        <div>
-            <a href="">3D</a>
-
-        </div>
-        <div>
-            <a href="">retrato</a>
-
-        </div>
-        <div>
-            <a href="">animales</a>
-
-        </div>
-        <div>
-            <a href="">Mitologia</a>
-
-        </div>
-    </div>
-    <div class="slider_two" id="closesecsion">
-        <div>
-            <a href="../vistas/profile.html">usuario</a>
-
-        </div>
-        <div>
-            <a href="../vistas/configuracion_usuario.html">configuracion</a>
-
-        </div>
-        <div>
-            <a href="../vistas/subir_imagen.html">upload</a>
-
-        </div>
-        <div>
-            <a href="">mis fotos</a>
-
-        </div>
-        <div>
-            <a href="">cuentas</a>
-
-        </div>
-        <div>
-            <a href="">cerrar secion </a>
-
-        </div>
-    </div>
-
-</div>
-<script  src="{url_for('static',filename ='inicion.js')}}"></script>
+{{super()}}
 </header>
 
 <body>
+    
     <div class="ruleta">
         <div class="carrusel_cont">
             <button aria-label="anterior" class="carusser_anterior">
@@ -197,7 +123,7 @@
     </div>
     <script  src="{url_for('static',filename ='inicion.js')}}"></script>
     <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
-   
+   {% endblock  %}
 </body>
 <br>
 <br>
