--- a/src/templates/configuracion_usuario.html
+++ b/src/templates/configuracion_usuario.html
@@ -11,9 +11,8 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <title>Profile</title>
-    <link rel="stylesheet" href="../public/css/estilo.css" type="text/css">
-    <link rel="stylesheet" href="../public/css/Global.css">
-
+    <link rel="stylesheet" href="{{url_for('static',filename ='estilo.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename ='Global.css')}}">
 </head>
 <body>
     <br>
