--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -20,11 +20,11 @@
     <link rel="stylesheet" href="{{url_for('static',filename ='menu.css')}}">
     <div class="Bar_menu">
         <div class="picture">
-            <a href="../vistas/inicio.html"> <img src="{{url_for('static',filename ='img/foutos.png')}}" alt="foto" height="45px"></a>
+            <a href="../main"> <img src="{{url_for('static',filename ='img/foutos.png')}}" alt="foto" height="45px"></a>
         </div>
         <div class="central">
             <div>
-                <a href="../vistas/comunidad.html"><button class="central_buton">Comunidad</button></a>
+                <a href="./comunidad"><button class="central_buton">Comunidad</button></a>
                 <button class="central_buton"> Trending</button>
                 
                 <button type="" id="pen-clo" class="central_buton"> Category</button>
@@ -72,15 +72,15 @@
         </div>
         <div class="slider_two" id="closesecsion">
             <div>
-                <a href="../vistas/profile.html">usuario</a>
+                <a href="../profile">usuario</a>
 
             </div>
             <div>
-                <a href="../vistas/configuracion_usuario.html">configuracion</a>
+                <a href="../user/config">configuracion</a>
 
             </div>
             <div>
-                <a href="../vistas/subir_imagen.html">upload</a>
+                <a href="../upload/foto">upload</a>
 
             </div>
             <div>
