--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="../public/css/estilo.css" type="text/css">
     <link rel="stylesheet" href="../public/css/Global.css">
     <link rel="stylesheet" href="../public/css/menu.css">
+    <link rel="stylesheet" href="{{url_for('static',filename ='menu.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename ='Global.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename ='estilo.css')}}">
 
 
 </head>
