--- a/src/templates/configuracion_usuario.html
+++ b/src/templates/configuracion_usuario.html
@@ -17,10 +17,7 @@
 
 </head>
 <header>
-  {% extends './menu.html' %}
-  {% block menu_bar  %}
-  
-  {{super()}}
+
 </head>
 <body>
 
@@ -31,24 +28,29 @@
       <div class="row">
         <div class="col">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            
+              
               <h1 class="pedo">AJUSTES</h1>
               <br>
+              <div class="v-line1"></div>
+              <div class="v-line"></div>
               <ul class="navbar-nav mr-auto">
+                <hr class="hr1">
                 <li class="nav-item">
-                    <a class="nav-link" style="height: 100px;font-size:50px;color:rgb(247, 247, 247);" href="#">Contraseña</a>
+                    <a class="nav-link" style="margin-top:-17px;height: 117px;font-size:50px;color:rgb(247, 247, 247);" href="#">Contraseña</a>
                 </li>
+                <hr class="hr1">
                 <li class="nav-item">
-                    <a class="nav-link" style="height: 100px;font-size: 50px;color:rgb(247, 247, 247);" href="./profile.html">Perfíl</a>
+                    <a class="nav-link" style="margin-top:-17px;height: 117px;font-size:50px;color:rgb(247, 247, 247);" href="./profile.html">Perfíl</a>
                 </li>
-                                <br>
-
+                <hr class="hr2">
               </ul>
-            </div>
           </nav>
         </div>
+      
 
-        <div class="col">    
+
+        <div class="col" style="height: 350px;border-color: rgb(0, 0, 0);border-style: groove;margin: 20px;background-color:#00000070;">    
 
           <div class="form-file">
             <div class="form-file__action">
@@ -61,36 +63,35 @@
             </div>
           </div>
         
-            <a href="./subir_imagen.html">
-          <button type="button" class="btn btn-outline-primary subir">Subir Foto</button>
-            </a>
+            
+          <button type="button" onclick="javascript:colocar_img()" class="btn btn-outline-primary subir">Subir Foto</button>
+            
         </div>
 
-        <div class="col" style= "border-style: groove;margin: 20px;background-color:#000000bb;">
+        <div class="col" style= "height: 450px;border-style: groove;margin: 20px;background-color:#000000bb;">
 
           <form>
             <br>
               <div class="form-group">
                 <label style="font-family:Impact;color: antiquewhite;" for="country">Nombre:</label>
-                <input class="form-control" id="exampleInputPassword1" readonly value="prueba">
+                <input class="form-control" id="exampleInputPassword1" readonly value="">
               </div>
               <br>
               <div class="form-group">
                 <label style="font-family:Impact;color: antiquewhite;" for="country">Correo:</label>
-                <input class="form-control" id="exampleInputPassword1" readonly value="prueba">
+                <input class="form-control" id="exampleInputPassword1" readonly value="">
               </div>
               <br>
               <div class="form-group">
                   <label style="font-family:Impact;color: antiquewhite;" for="country">País:</label>
-                  <br>
-                  <input class="form-control" id="exampleInputPassword1" readonly value="prueba">          
+                  <input class="form-control" id="exampleInputPassword1" readonly value="">          
               </div>
               <br>
               <div class="form-group">
                   <label style="font-family:Impact;color: antiquewhite;" for="city">Ciudad:</label>
-                  <input class="form-control" id="exampleInputPassword1" readonly value="prueba">                     
+                  <input class="form-control" id="exampleInputPassword1" readonly value="">                     
               </div>
-              <br>              
+              <button type="button" class="btn btn-outline-primary subir1">Subir Foto</button>
           </form>
         </div>
       </div>
@@ -98,7 +99,6 @@
     <script src="../public/js/configuracion_usuario.js"></script>
     
     
-    {% endblock  %}
 </body>
 
 </html>
