--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -24,7 +24,7 @@
         </div>
         <div class="central">
             <div>
-                <a href="./comunidad"><button class="central_buton">Comunidad</button></a>
+                <a href="../comunidad"><button class="central_buton">Comunidad</button></a>
                 <button class="central_buton"> Trending</button>
                 
                 <button type="" id="pen-clo" class="central_buton"> Category</button>
