--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Validación de Formulario con Javascript</title>
+	<title>foutos</title>
 	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" href="../public/css/register_style.css">
@@ -42,7 +42,7 @@
 			</div>
 
 			<div class="formulario__grupo" id="grupo__nombre">
-				<label for="nombre" class="formulario__label">Nombre</label>
+				<label for="nombre" class="formulario__label">NAME</label>
 				<div class="formulario__grupo-input">
 					<input type="text" class="formulario__input" name="nombre" id="nombre" placeholder="John Doe">
 					<i class="formulario__validacion-estado fas fa-times-circle"></i>
@@ -52,7 +52,7 @@
 
 		
 			<div class="formulario__grupo" id="grupo__password">
-				<label for="password" class="formulario__label">Contraseña</label>
+				<label for="password" class="formulario__label">PASSWORD</label>
 				<div class="formulario__grupo-input">
 					<input type="password" class="formulario__input" name="password" id="password">
 					<i class="formulario__validacion-estado fas fa-times-circle"></i>
@@ -62,7 +62,7 @@
 
 			
 			<div class="formulario__grupo" id="grupo__password2">
-				<label for="password2" class="formulario__label">Repetir Contraseña</label>
+				<label for="password2" class="formulario__label">REPEAT PASSWORD</label>
 				<div class="formulario__grupo-input">
 					<input type="password" class="formulario__input" name="password2" id="password2">
 					<i class="formulario__validacion-estado fas fa-times-circle"></i>
@@ -71,7 +71,7 @@
 			</div>
 
 			<div class="formulario__grupo" id="grupo__correo">
-				<label for="correo" class="formulario__label">Correo Electrónico</label>
+				<label for="correo" class="formulario__label">EMAIL</label>
 				<div class="formulario__grupo-input">
 					<input type="email" class="formulario__input" name="correo" id="correo" placeholder="correo@correo.com">
 					<i class="formulario__validacion-estado fas fa-times-circle"></i>
@@ -81,7 +81,7 @@
 
 			
 			<div class="formulario__grupo" id="grupo__telefono">
-				<label for="telefono" class="formulario__label">Teléfono</label>
+				<label for="telefono" class="formulario__label">PHONE</label>
 				<div class="formulario__grupo-input">
 					<input type="text" class="formulario__input" name="telefono" id="telefono" placeholder="4491234567">
 					<i class="formulario__validacion-estado fas fa-times-circle"></i>
@@ -102,8 +102,7 @@
                 </div>
 		</form>
 	</main>
-
-	<script src="../public/js/register.js"></script>
+    <script  src="{url_for('static',filename ='register.js')}}"></script>
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     {% endblock  %}
 </body>
