--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -33,8 +33,8 @@
             <div class="col">        
                 <img class="circular--square" src="../public/img/images (1).png" />
                 
-                <h1 style="margin-left:100px;color: antiquewhite;font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> Descripción</h1>
-                <h2 style= "margin-left:100px;color:antiquewhite;font-family:Arial, Helvetica, sans-serif" >Que tal? aqui puedes hablar acerca de ti.</h2>
+                <h1 style="margin-left:20px;color: antiquewhite;font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> Descripción</h1>
+                <h2 style= "margin-left:20px;color:antiquewhite;font-family:Arial, Helvetica, sans-serif" >Que tal? aqui puedes hablar acerca de ti.</h2>
             </div>
             <div class="col" style="margin-left:-40px" >
               
@@ -63,12 +63,7 @@
                         <div class="container">
                             <h2 class="text-center">Galeria</h2>
                             <div class="lightbox-gallery">
-                                <div><img src="https://picsum.photos/id/343/300/300" ></div>
-                                <div><img src="https://picsum.photos/id/112/300/300" ></div>
-                                <div><img src="https://picsum.photos/id/155/300/300" ></div>
-                                <div><img src="https://picsum.photos/id/11/300/300"  ></div>
-                                <div><img src="https://picsum.photos/id/434/300/300" ></div>
-                                <div><img src="https://picsum.photos/id/101/300/300" ></div>
+                                    <img class="Foto" onclick="../templates/subir_imagen.html" src="../public/img/Captura de pantalla 2023-01-19 233448.png">
                             </div>
                           </div>
                         
